--- a/index.html
+++ b/index.html
@@ -26,18 +26,28 @@
  }
  .hidden { display: none !important; }
 
+ /* MODIFICATION START: Styles for version display */
+ .version-display {
+  position: fixed;
+  top: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 0.7rem;
+  color: rgba(255, 255, 255, 0.4);
+  z-index: 9999;
+ }
+ /* MODIFICATION END */
+
  /* --- Instruction Screen Styles (from File 2) --- */
  #instructionScreen {
  justify-content: center; align-items: center; padding: 2rem;
  text-align: center;
  position: relative;
- flex-direction: column;
  }
- /* MODIFICATION START: Styles for new close button and updated layout */
  .close-btn {
  position: absolute;
- top: 1rem; /* MODIFIED */
- left: 1rem; /* MODIFIED */
+ top: 1rem;
+ left: 1rem;
  font-size: 2rem;
  color: #f0f0f0;
  cursor: pointer;
@@ -45,11 +55,10 @@
  line-height: 1;
  z-index: 10;
  }
- /* MODIFICATION START: Sound toggle button styles */
  .sound-toggle {
  position: absolute;
- top: 1.2rem; /* MODIFIED */
- right: 1.2rem; /* MODIFIED */
+ top: 1.2rem;
+ right: 1.2rem;
  font-size: 1.2rem;
  color: #f0f0f0;
  cursor: pointer;
@@ -60,7 +69,6 @@
  .sound-toggle.on {
  font-weight: bold;
  }
- /* MODIFICATION END */
  #instructionScreen .content {
  max-width: 400px;
  width: 100%;
@@ -90,7 +98,7 @@
  bottom: auto;
  left: auto;
  transform: none;
- width: 100%;
+ width: 90%;
  max-width: 400px; padding: 1rem; font-size: 1.1rem;
  font-weight: 500; color: #f0f0f0; background-color: transparent;
  border: 1px solid #f0f0f0;
@@ -99,7 +107,6 @@
  margin-top: 2.75rem;
  }
  #startCaptureButton:disabled { opacity: 0.5; cursor: not-allowed; }
-
 
  /* --- Main App/Capture Screen Styles --- */
  .app-container {
@@ -186,20 +193,21 @@
  </style>
 </head>
 <body>
+<div class="version-display">v 1.1</div>
 
 <!-- =========== INSTRUCTION SCREEN (from File 2) =========== -->
 <div id="instructionScreen" class="screen">
  <div class="close-btn" onclick="alert('Close button clicked. Functionality to be added later.')">&times;</div>
  <div id="soundToggle" class="sound-toggle">s</div>
  <div class="content">
-  <h1>Testing space scan<br>instructions</h1>
-  <ul>
-   <li><svg class="icon" viewBox="0 0 24 24"><path d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,2A1,1 0 0,1 13,3V4A1,1 0 0,1 12,5A1,1 0 0,1 11,4V3A1,1 0 0,1 12,2M19.07,4.93A1,1 0 0,1 20.5,6.34L19.79,7.05A1,1 0 0,1 18.38,5.64L19.07,4.93M4.93,19.07A1,1 0 0,1 6.34,20.5L7.05,19.79A1,1 0 0,1 5.64,18.38L4.93,19.07M18.38,18.38A1,1 0 0,1 19.79,19.79L20.5,19.07A1,1 0 0,1 19.07,17.66L18.38,18.38M22,12A1,1 0 0,1 21,13H20A1,1 0 0,1 19,12A1,1 0 0,1 20,11H21A1,1 0 0,1 22,12M4,12A1,1 0 0,1 3,13H2A1,1 0 0,1 1,12A1,1 0 0,1 2,11H3A1,1 0 0,1 4,12M12,19A1,1 0 0,1 11,20V21A1,1 0 0,1 12,22A1,1 0 0,1 13,21V20A1,1 0 0,1 12,19Z"/></svg><span>Ensure testing space is well-lit</span></li>
-   <li><svg class="icon" viewBox="0 0 24 24"><path d="M2 12h20v2H2zm2-4h2v2H4zm14 0h2v2h-2zM2 6h20v2H2zm18 8H4v6h2v-2h12v2h2z"/></svg><span>Stand in the middle of your testing space facing your desk.</span></li>
-   <li><svg class="icon" viewBox="0 0 24 24"><path d="M17,19H7V5H17M17,1H7C5.89,1 5,1.89 5,3V21A2,2 0 0,0 7,23H17A2,2 0 0,0 19,21V3C19,1.89 18.1,1 17,1Z"/></svg><span>Hold your mobile phone in portrait mode and as level as possible and aligning the arrow with the line.</span></li>
-   <li><svg class="icon" viewBox="0 0 24 24"><path d="M12,4C14.1,4 16.1,4.8 17.6,6.3C20.7,9.4 20.7,14.5 17.6,17.6C14.5,20.7 9.4,20.7 6.3,17.6C5.1,16.5 4.3,15.1 4,13.5H6.1C6.4,14.6 7.1,15.6 7.9,16.4C10.3,18.8 14.3,18.8 16.7,16.4C19.1,14 19.1,10 16.7,7.6C15.6,6.5 14,6 12.3,6L13.1,6.8L11.7,8.2L8.2,4.7L11.7,1.2L13.1,2.6L12,3.8C12,3.8 12,3.9 12,4M12,19.9C11.7,19.9 11.4,20 11.1,20C6.6,20 3,16.4 3,11.9C3,11.6 3,11.3 3,11H1C1,11.3 1,11.6 1,11.9C1,17.5 5.5,22 11.1,22C11.4,22 11.7,22 12,21.9V19.9Z"/></svg><span>When prompted start rotating to your right 360&deg;</span></li>
-   <li><svg class="icon" viewBox="0 0 24 24"><path d="M12.2,19.9C14.6,19.9 16.6,17.9 16.6,15.5C16.6,13.1 14.6,11.1 12.2,11.1C11.2,11.1 9.9,11.9 9.9,11.9C9.9,11.9 9.3,11.4 8.2,11.1C6.2,10.5 4.1,11.9 3.5,13.9C2.8,15.9 4.2,18 6.2,18.7C6.6,18.8 7.1,18.9 7.6,18.9C8.6,18.9 9.6,18.5 10.3,17.7C10.3,17.7 10.6,18.9 12.2,19.9M18,12.5C19.4,12.5 20.5,11.4 20.5,10C20.5,8.6 19.4,7.5 18,7.5C16.6,7.5 15.5,8.6 15.5,10C15.5,11.4 16.6,12.5 18,12.5M19.5,6.5C20.6,6.5 21.5,5.6 21.5,4.5C21.5,3.4 20.6,2.5 19.5,2.5C18.4,2.5 17.5,3.4 17.5,4.5C17.5,5.6 18.4,6.5 19.5,6.5Z"/></svg><span>Move slowly to ensure proper capturing of your environment.</span></li>
-  </ul>
+ <h1>Testing space scan<br>instructions</h1>
+ <ul>
+  <li><svg class="icon" viewBox="0 0 24 24"><path d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,2A1,1 0 0,1 13,3V4A1,1 0 0,1 12,5A1,1 0 0,1 11,4V3A1,1 0 0,1 12,2M19.07,4.93A1,1 0 0,1 20.5,6.34L19.79,7.05A1,1 0 0,1 18.38,5.64L19.07,4.93M4.93,19.07A1,1 0 0,1 6.34,20.5L7.05,19.79A1,1 0 0,1 5.64,18.38L4.93,19.07M18.38,18.38A1,1 0 0,1 19.79,19.79L20.5,19.07A1,1 0 0,1 19.07,17.66L18.38,18.38M22,12A1,1 0 0,1 21,13H20A1,1 0 0,1 19,12A1,1 0 0,1 20,11H21A1,1 0 0,1 22,12M4,12A1,1 0 0,1 3,13H2A1,1 0 0,1 1,12A1,1 0 0,1 2,11H3A1,1 0 0,1 4,12M12,19A1,1 0 0,1 11,20V21A1,1 0 0,1 12,22A1,1 0 0,1 13,21V20A1,1 0 0,1 12,19Z"/></svg><span>Ensure testing space is well-lit</span></li>
+  <li><svg class="icon" viewBox="0 0 24 24"><path d="M2 12h20v2H2zm2-4h2v2H4zm14 0h2v2h-2zM2 6h20v2H2zm18 8H4v6h2v-2h12v2h2z"/></svg><span>Stand in the middle of your testing space facing your desk.</span></li>
+  <li><svg class="icon" viewBox="0 0 24 24"><path d="M17,19H7V5H17M17,1H7C5.89,1 5,1.89 5,3V21A2,2 0 0,0 7,23H17A2,2 0 0,0 19,21V3C19,1.89 18.1,1 17,1Z"/></svg><span>Hold your mobile phone in portrait mode and as level as possible and aligning the arrow with the line.</span></li>
+  <li><svg class="icon" viewBox="0 0 24 24"><path d="M12,4C14.1,4 16.1,4.8 17.6,6.3C20.7,9.4 20.7,14.5 17.6,17.6C14.5,20.7 9.4,20.7 6.3,17.6C5.1,16.5 4.3,15.1 4,13.5H6.1C6.4,14.6 7.1,15.6 7.9,16.4C10.3,18.8 14.3,18.8 16.7,16.4C19.1,14 19.1,10 16.7,7.6C15.6,6.5 14,6 12.3,6L13.1,6.8L11.7,8.2L8.2,4.7L11.7,1.2L13.1,2.6L12,3.8C12,3.8 12,3.9 12,4M12,19.9C11.7,19.9 11.4,20 11.1,20C6.6,20 3,16.4 3,11.9C3,11.6 3,11.3 3,11H1C1,11.3 1,11.6 1,11.9C1,17.5 5.5,22 11.1,22C11.4,22 11.7,22 12,21.9V19.9Z"/></svg><span>When prompted start rotating to your right 360&deg;</span></li>
+  <li><svg class="icon" viewBox="0 0 24 24"><path d="M12.2,19.9C14.6,19.9 16.6,17.9 16.6,15.5C16.6,13.1 14.6,11.1 12.2,11.1C11.2,11.1 9.9,11.9 9.9,11.9C9.9,11.9 9.3,11.4 8.2,11.1C6.2,10.5 4.1,11.9 3.5,13.9C2.8,15.9 4.2,18 6.2,18.7C6.6,18.8 7.1,18.9 7.6,18.9C8.6,18.9 9.6,18.5 10.3,17.7C10.3,17.7 10.6,18.9 12.2,19.9M18,12.5C19.4,12.5 20.5,11.4 20.5,10C20.5,8.6 19.4,7.5 18,7.5C16.6,7.5 15.5,8.6 15.5,10C15.5,11.4 16.6,12.5 18,12.5M19.5,6.5C20.6,6.5 21.5,5.6 21.5,4.5C21.5,3.4 20.6,2.5 19.5,2.5C18.4,2.5 17.5,3.4 17.5,4.5C17.5,5.6 18.4,6.5 19.5,6.5Z"/></svg><span>Move slowly to ensure proper capturing of your environment.</span></li>
+ </ul>
  </div>
  <button id="startCaptureButton">Start testing space scan</button>
 </div>
@@ -265,7 +273,7 @@
  const permissionOverlay = document.getElementById('permission-overlay');
  const permissionBtn = document.getElementById('permission-button');
  const permissionError = document.getElementById('permission-error');
- const soundToggle = document.getElementById('soundToggle');
+ const soundToggle = document.getElementById('soundToggle'); // MODIFICATION
 
  // --- State and Configuration Variables ---
  let countdownStartTimer = null, isCountdownActive = false;
@@ -274,7 +282,7 @@
  let videoStream = null;
  let imageCaptureController = null;
  let isCapturing = false;
- let isSoundEnabled = false;
+ let isSoundEnabled = false; // MODIFICATION
 
  const COUNTDOWN_HOLD_TIME = 4000;
  const TARGET_PITCH = 80;
@@ -326,24 +334,24 @@
 
  // MODIFICATION START: Sound Toggle Function
  function toggleSound() {
- isSoundEnabled = !isSoundEnabled;
- soundToggle.classList.toggle('on', isSoundEnabled);
+  isSoundEnabled = !isSoundEnabled;
+  soundToggle.classList.toggle('on', isSoundEnabled);
  }
  // MODIFICATION END
 
  // --- Permission Handling & Audio Setup ---
- // MODIFICATION: Reverted this function to its original state to fix button functionality.
+ // THIS FUNCTION IS FROM THE ORIGINAL FILE AND HAS NOT BEEN CHANGED TO PRESERVE FUNCTIONALITY
  async function requestAllPermissions() {
  startCaptureButton.disabled = true;
  startCaptureButton.textContent = 'Requesting Access...';
 
  // Initialize AudioContext on user interaction
  if (!audioContext) {
-  try {
-   audioContext = new (window.AudioContext || window.webkitAudioContext)();
-  } catch(e) {
-   console.warn("Web Audio API is not supported in this browser.");
-  }
+   try {
+    audioContext = new (window.AudioContext || window.webkitAudioContext)();
+   } catch(e) {
+    console.warn("Web Audio API is not supported in this browser.");
+   }
  }
 
  if (typeof DeviceOrientationEvent.requestPermission === 'function') {
@@ -688,14 +696,14 @@
   appContainer.classList.add('hidden');
   instructionScreen.classList.remove('hidden');
   startCaptureButton.disabled = false;
-  startCaptureButton.textContent = 'Start testing space scan';
+  startCaptureButton.textContent = 'Start testing space scan'; // MODIFICATION
   arrowShape.style.stroke = 'black';
   arrowShape.style.fill = COLOR_BAD;
  }
 
  // Audio Functions
  function playBeep() {
-  if (!audioContext || !isSoundEnabled) return; // MODIFICATION: Check if sound is enabled
+  if (!audioContext || !isSoundEnabled) return; // MODIFICATION
   const oscillator = audioContext.createOscillator();
   const gainNode = audioContext.createGain();
 
@@ -736,7 +744,7 @@
  startCaptureButton.addEventListener('click', requestAllPermissions);
  permissionBtn.addEventListener('click', requestAllPermissions);
  instructionResetLink.addEventListener('click', resetAppToInstructions);
- soundToggle.addEventListener('click', toggleSound);
+ soundToggle.addEventListener('click', toggleSound); // MODIFICATION
 
  // Event listeners for review overlay (unchanged)
  reviewOverlay.addEventListener('touchstart', (e) => {
