--- a/index.html
+++ b/index.html
@@ -26,15 +26,22 @@
  }
  .hidden { display: none !important; }
 
- /* MODIFICATION START: Styles for version display */
- .version-display {
+ /* MODIFICATION START: Styles for top bar controls container */
+ #top-bar-controls {
   position: fixed;
-  top: 5px;
-  left: 50%;
-  transform: translateX(-50%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 5px;
+  box-sizing: border-box;
+  z-index: 9999;
+ }
+ .version-display {
   font-size: 0.7rem;
   color: rgba(255, 255, 255, 0.4);
-  z-index: 9999;
  }
  /* MODIFICATION END */
 
@@ -45,31 +52,25 @@
  position: relative;
  }
  .close-btn {
- position: absolute;
- top: 5px; /* MODIFIED */
- left: 5px; /* MODIFIED */
- padding: 0.5rem; /* Adds touch area without moving the icon */
- font-size: 2rem;
- color: #f0f0f0;
- cursor: pointer;
- font-family: sans-serif;
- line-height: 1;
- z-index: 10;
+  /* MODIFIED: Positioning is now handled by flex container */
+  font-size: 2rem;
+  color: #f0f0f0;
+  cursor: pointer;
+  font-family: sans-serif;
+  line-height: 1;
+  z-index: 10;
  }
  .sound-toggle {
- position: absolute;
- top: 5px; /* MODIFIED */
- right: 5px; /* MODIFIED */
- padding: 0.5rem; /* Adds touch area without moving the icon */
- font-size: 1.2rem;
- color: rgba(255, 255, 255, 0.4); /* MODIFIED: Initial color changed */
- cursor: pointer;
- font-family: sans-serif;
- font-weight: normal;
- z-index: 10;
+  /* MODIFIED: Positioning is now handled by flex container */
+  font-size: 0.7rem; /* MODIFIED */
+  color: rgba(255, 255, 255, 0.4);
+  cursor: pointer;
+  font-family: sans-serif;
+  font-weight: normal;
+  z-index: 10;
  }
  .sound-toggle.on {
- color: #f0f0f0; /* MODIFIED: Active color added */
+ color: #f0f0f0;
  font-weight: bold;
  }
  #instructionScreen .content {
@@ -140,11 +141,11 @@
  #arrow-shape { transition: fill 0.2s linear; }
  .scan-line {
  position: absolute;
- top: calc(50% + 13px); /* MOVED DOWN 13px */
+ top: calc(50% + 13px);
  left: 5%;
  right: 5%;
- height: 2px;
- background-color: #e74c3c;
+ height: 6px; /* MODIFIED */
+ background-color: rgba(231, 76, 60, 0.75); /* MODIFIED */
  transform: translateY(-50%);
  }
  #instructionMessageBox {
@@ -196,12 +197,16 @@
  </style>
 </head>
 <body>
-<div class="version-display">v 1.3</div>
+<!-- MODIFICATION START: All top-bar controls are now in a flex container for alignment -->
+<div id="top-bar-controls">
+ <div class="close-btn" onclick="alert('Close button clicked. Functionality to be added later.')">&times;</div>
+ <div class="version-display">v 1.4</div>
+ <div id="soundToggle" class="sound-toggle">s</div>
+</div>
+<!-- MODIFICATION END -->
 
 <!-- =========== INSTRUCTION SCREEN (from File 2) =========== -->
 <div id="instructionScreen" class="screen">
- <div class="close-btn" onclick="alert('Close button clicked. Functionality to be added later.')">&times;</div>
- <div id="soundToggle" class="sound-toggle">s</div>
  <div class="content">
  <h1>Testing space scan<br>instructions</h1>
  <ul>
@@ -276,7 +281,7 @@
  const permissionOverlay = document.getElementById('permission-overlay');
  const permissionBtn = document.getElementById('permission-button');
  const permissionError = document.getElementById('permission-error');
- const soundToggle = document.getElementById('soundToggle'); // MODIFICATION
+ const soundToggle = document.getElementById('soundToggle');
 
  // --- State and Configuration Variables ---
  let countdownStartTimer = null, isCountdownActive = false;
@@ -285,7 +290,7 @@
  let videoStream = null;
  let imageCaptureController = null;
  let isCapturing = false;
- let isSoundEnabled = false; // MODIFICATION
+ let isSoundEnabled = false;
 
  const COUNTDOWN_HOLD_TIME = 4000;
  const TARGET_PITCH = 80;
@@ -299,7 +304,7 @@
  const PITCH_SCAN_TOLERANCE = 5;
  const ROLL_SCAN_TOLERANCE = 20;
 
- // MODIFICATION: Velocity thresholds adjusted
+ // Velocity thresholds adjusted
  const VELOCITY_WARNING_THRESHOLD = 30; // deg/s
  const VELOCITY_DANGER_THRESHOLD = 60; // deg/s
 
@@ -307,7 +312,7 @@
  const ARROW_HALF_HEIGHT_PX = 21.5;
 
  // Colors for alignment arrow
- const COLOR_GOOD = '#FFFFFF', COLOR_OK = '#f1c40f', COLOR_BAD = '#e74c3c';
+ const COLOR_GOOD = 'var(--target-color-light)', COLOR_OK = '#f1c40f', COLOR_BAD = '#e74c3c'; // MODIFIED
 
  let currentHeading = 0, startHeading = 0;
  let targetHeadings = [], nextHeadingIndex = 0;
@@ -335,12 +340,10 @@
  const MAX_BEEP_INTERVAL = 2000;
  const MIN_BEEP_INTERVAL = 200;
 
- // MODIFICATION START: Sound Toggle Function
  function toggleSound() {
   isSoundEnabled = !isSoundEnabled;
   soundToggle.classList.toggle('on', isSoundEnabled);
  }
- // MODIFICATION END
 
  // --- Permission Handling & Audio Setup ---
  // THIS FUNCTION IS FROM THE ORIGINAL FILE AND HAS NOT BEEN CHANGED.
@@ -481,7 +484,6 @@
   countdownStartTimer = setTimeout(startCountdownSequence, COUNTDOWN_HOLD_TIME);
   }
   } else {
-   // MODIFICATION: Any non-good state is yellow
    arrowShape.style.fill = COLOR_OK;
    hideInstructionMessage();
    if (countdownStartTimer) {
@@ -587,7 +589,6 @@
     scanState = 'complete';
     hideInstructionMessage();
     clearTimeout(beepTimeoutId);
-    // MODIFICATION: Adjusted final arrow position
     scanArrowContainer.style.left = 'calc(95% - 68px)';
     scanArrowContainer.style.top = 'calc(50% - 24.5px)';
     scanArrowContainer.style.transform = 'rotate(0deg)';
@@ -702,14 +703,14 @@
   appContainer.classList.add('hidden');
   instructionScreen.classList.remove('hidden');
   startCaptureButton.disabled = false;
-  startCaptureButton.textContent = 'Start testing space scan'; // MODIFICATION
+  startCaptureButton.textContent = 'Start testing space scan';
   arrowShape.style.stroke = 'black';
   arrowShape.style.fill = COLOR_BAD;
  }
 
  // Audio Functions
  function playBeep() {
-  if (!audioContext || !isSoundEnabled) return; // MODIFICATION
+  if (!audioContext || !isSoundEnabled) return;
   const oscillator = audioContext.createOscillator();
   const gainNode = audioContext.createGain();
 
@@ -750,7 +751,7 @@
  startCaptureButton.addEventListener('click', requestAllPermissions);
  permissionBtn.addEventListener('click', requestAllPermissions);
  instructionResetLink.addEventListener('click', resetAppToInstructions);
- soundToggle.addEventListener('click', toggleSound); // MODIFICATION
+ soundToggle.addEventListener('click', toggleSound);
 
  // Event listeners for review overlay (unchanged)
  reviewOverlay.addEventListener('touchstart', (e) => {
