--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
  }
  .sound-toggle {
   /* MODIFIED: Positioning is now handled by flex container */
-  font-size: 0.7rem; /* MODIFIED */
+  font-size: 0.7rem;
   color: rgba(255, 255, 255, 0.4);
   cursor: pointer;
   font-family: sans-serif;
@@ -118,6 +118,24 @@
  max-width: 480px; height: 100dvh; margin: 0 auto;
  background-color: #000; box-shadow: 0 0 20px rgba(0,0,0,0.1);
  }
+ /* MODIFICATION START: App Header Styles */
+ .app-header {
+  display: flex;
+  align-items: center;
+  padding: 12px 16px;
+  background-color: #1a1a1a;
+  border-bottom: 1px solid #333;
+  color: #f0f0f0;
+  font-weight: 500;
+  font-size: 1.1rem;
+ }
+ .app-header .header-icon {
+  width: 24px;
+  height: 24px;
+  fill: #f0f0f0;
+  margin-right: 12px;
+ }
+ /* MODIFICATION END */
  .main-content { display: flex; min-height: 0; }
  .camera-view-container {
  flex-grow: 1; position: relative; min-width: 0; background-color: #111;
@@ -150,13 +168,17 @@
  }
  #instructionMessageBox {
  display: none; position: absolute;
- bottom: calc(50% + 20px); /* Positioned 20px above the vertical center */
+ bottom: calc(50% + 40px); /* MODIFIED: Moved up */
  left: 50%; transform: translateX(-50%);
  width: 70%; max-width: 300px;
  background-color: rgba(190, 190, 190, 0.85);
  backdrop-filter: blur(5px); -webkit-backdrop-filter: blur(5px);
- color: #000; font-weight: 500; padding: 1rem; border-radius: 15px;
- text-align: center; font-size: 0.9rem; line-height: 1.4; z-index: 20;
+ color: #000;
+ font-weight: 600; /* MODIFIED */
+ padding: 1rem; border-radius: 15px;
+ text-align: center;
+ font-size: 1.1rem; /* MODIFIED */
+ line-height: 1.4; z-index: 20;
  }
  /* Style for the reset link */
  #instructionResetLink {
@@ -200,7 +222,7 @@
 <!-- MODIFICATION START: All top-bar controls are now in a flex container for alignment -->
 <div id="top-bar-controls">
  <div class="close-btn" onclick="alert('Close button clicked. Functionality to be added later.')">&times;</div>
- <div class="version-display">v 1.4</div>
+ <div class="version-display">v 1.5</div>
  <div id="soundToggle" class="sound-toggle">s</div>
 </div>
 <!-- MODIFICATION END -->
@@ -222,6 +244,12 @@
 
 <!-- =========== MAIN APP (File 1 structure with File 2 visuals) =========== -->
 <div class="app-container hidden">
+ <!-- MODIFICATION START: App Header Added -->
+ <header class="app-header">
+  <svg class="header-icon" viewBox="0 0 24 24"><path d="M17,10.5V7A1,1 0 0,0 16,6H4A1,1 0 0,0 3,7V17A1,1 0 0,0 4,18H16A1,1 0 0,0 17,17V13.5L21,17.5V6.5L17,10.5Z"></path></svg>
+  <span>Capture testing space scan</span>
+ </header>
+ <!-- MODIFICATION END -->
  <div class="main-content">
  <div class="camera-view-container" id="camera-view-container">
   <div class="camera-view" id="camera-view">
@@ -284,7 +312,7 @@
  const soundToggle = document.getElementById('soundToggle');
 
  // --- State and Configuration Variables ---
- let countdownStartTimer = null, isCountdownActive = false;
+ let isCountdownActive = false; // MODIFIED: countdownStartTimer removed
  let scanState = 'pre-scan'; // 'pre-scan', 'scanning', 'paused', 'complete', 'error'
  let capturedFrames = [];
  let videoStream = null;
@@ -292,7 +320,6 @@
  let isCapturing = false;
  let isSoundEnabled = false;
 
- const COUNTDOWN_HOLD_TIME = 4000;
  const TARGET_PITCH = 80;
  const DEGREES_PER_FRAME = 60;
  const TOTAL_FRAMES = 360 / DEGREES_PER_FRAME;
@@ -346,7 +373,6 @@
  }
 
  // --- Permission Handling & Audio Setup ---
- // THIS FUNCTION IS FROM THE ORIGINAL FILE AND HAS NOT BEEN CHANGED.
  async function requestAllPermissions() {
  startCaptureButton.disabled = true;
  startCaptureButton.textContent = 'Requesting Access...';
@@ -402,6 +428,9 @@
   startListening();
   instructionScreen.classList.add('hidden');
   appContainer.classList.remove('hidden');
+  // MODIFICATION START: Show initial instruction message
+  showInstructionMessage("Align the arrow with the red line to begin countdown.");
+  // MODIFICATION END
  } catch (err) {
   console.error("Camera error:", err);
   permissionError.textContent = "Camera access denied. Please check settings.";
@@ -415,7 +444,6 @@
  // --- Countdown and Scan Start Logic ---
  function startCountdownSequence() {
  isCountdownActive = true;
- countdownStartTimer = null;
  hideInstructionMessage();
  countdownDisplay.style.display = 'block';
 
@@ -471,6 +499,7 @@
 
  const pitchOffset = beta - TARGET_PITCH;
 
+ // MODIFICATION START: Updated pre-scan logic
  if (scanState === 'pre-scan') {
   const topPercent = Math.max(5, Math.min(95, 50 + (pitchOffset * SENSITIVITY)));
   scanArrowContainer.style.top = `calc(${topPercent}% - ${ARROW_HALF_HEIGHT_PX}px)`;
@@ -479,19 +508,14 @@
   const deviation = Math.abs(pitchOffset);
   if (deviation < PITCH_TOLERANCE_GOOD) {
   arrowShape.style.fill = COLOR_GOOD;
-  showInstructionMessage("Get ready to slowly pan the camera... stay on the red line, and keep steady for best results.");
-  if (countdownStartTimer === null) {
-  countdownStartTimer = setTimeout(startCountdownSequence, COUNTDOWN_HOLD_TIME);
+  if (!isCountdownActive) {
+   startCountdownSequence();
   }
   } else {
    arrowShape.style.fill = COLOR_OK;
-   hideInstructionMessage();
-   if (countdownStartTimer) {
-    clearTimeout(countdownStartTimer);
-    countdownStartTimer = null;
-   }
   }
  } else if (scanState === 'scanning') {
+ // MODIFICATION END
   let degreesRotated = (startHeading - currentHeading + 360) % 360;
 
   if (!isVelocityCheckActive && degreesRotated > 10 && degreesRotated < 180) {
@@ -694,8 +718,7 @@
   isCapturing = false;
   currentHeading = 0;
   startHeading = 0;
-  countdownStartTimer = null;
-  isVelocityCheckActive = false;
+  isCountdownActive = false; // MODIFIED: countdownStartTimer removed
   smoothedAngularVelocity = 0;
    
   progressDisplay.innerHTML = '';
